# stock_data_pykis

./: .gitignore  pyproject.toml
app/: INDEX_update.py  KOSPI_update.py  SNP500_update.py  update_Info.py  update_price_daily.py
app/util/: convert_symbol_to_chartlist.py  convert_symbol_to_infodict.py  update_symbol_info.py  update_symbol_price_daily.py
app/util/_pykis/: Load_Pykis.py  token_string.py
app/util/db/: _update_snp500_daily.py  _update_symbol.py  connect_db.py  drop_info.py  upsert_index.py  upsert_info.py  upsert_price.py
app/util/index/: get_foreign.py  get_kospi.py
app/util/kospi/: _save_kospi_price_history.py  get_1y_period.py  get_kospi_index.py  save_kospi_price_history_csv.py  save_kospi_stock_index.py  update_kospi_history.py
app/util/snp/: _index_history_to_db.py  _save_foreign_index_history.py  get_snp500_index.py  save_snp500_stock_index.py
